@@ -5,6 +5,9 @@ Fixes:
  - MODELER-454: Impossible to download Pro controller from Pro Designer
  - MODELER-455: Incorrectly referenced css
 
+New features:
+ - Add support for Marantz Receivers protocol (MODELER-442)
+
 Pro 1.0.6
 =========
 
